added offense parsing from pro football

--- a/public/index.html
+++ b/public/index.html
@@ -7,82 +7,6 @@
         <div id="data" >
             <div id="defenses"></div>
         </div>
+        <script src="../src/index.js"></script>
     </body>
-    <script>
-        fetch('/DKw2Early.csv').then(response => response.text()).then( data => {
-            // console.log(data)
-            const ignoreColumns = ['Name + ID', 'ID', 'Roster Position']
-            let dataEl = document.getElementById('data')
-
-            let lines = data.split('\n')
-            let columns = {};
-            let players = [];
-            let matchups = {}
-            nicknames = {
-                '49ers' : 'SF',
-                'Bills' : 'BUF',
-                'Steelers': 'PIT',
-                'Bears':'CHI',
-                'Ravens': 'BAL',
-                'Titans': 'TEN',
-                'Chiefs': 'KC',
-                'Packers': 'GB',
-                'Vikings': 'MIN',
-                'WAS Football Team': 'WAS',
-                'Cardinals': 'ARI',
-                'Buccaneers': 'TB',
-                'Rams': 'LAR',
-                'Cowboys': 'DAL',
-                'Eagles': 'PHI',
-                'Falcons': 'ATL',
-                'Broncos': 'DEN',
-                'Colts': 'IND',
-                'Giants': 'NYG',
-                'Jaguars': 'JAX',
-                'Panthers': 'CAR',
-                'Texans': 'HOU',
-                'Lions': 'DET',
-                'Dolphins': 'DET',
-                'Jets': 'NYJ',
-                'Chargers': 'LAC'
-            }
-
-            lines.map((line, index) => {
-                // the first line contains the keys
-                const cols = line.split(',')
-                if(index < 1) {
-                    cols.map((col, index) => {
-                        //if(ignoreColumns.includes(col)) return
-                        columns[index] = col
-                    })
-                    return
-                } else {
-                    //use the columns to create an object for each player and push into array
-                    let player = {}
-                    cols.map((col, index) => {
-                        if(ignoreColumns.includes(columns[index])) return
-                        player[columns[index]] = col    
-                    })
-
-                    // this will create the opponent by parsing a very specific string of T1@T2<space>DateTime
-                    const opp = player['Game Info'] 
-                        ? player['Game Info'].replace(player['TeamAbbrev'], '').replace('@', '').split(' ')[0] 
-                        : "TBA"
-                    player['Opponent'] = opp;
-                    players.push(player)
-
-                    // if the matchup doesn't exist then create the object and add current player
-                    if(!matchups[player['TeamAbbrev']]) matchups[player['TeamAbbrev']] = {}
-                    //matchups[player['TeamAbbrev']].push(player)
-                    if(!matchups[player['TeamAbbrev']][player['Position']]) matchups[player['TeamAbbrev']][player['Position']] = []
-                    matchups[player['TeamAbbrev']][player['Position']].push(index)
-
-                }
-            })
-
-            players.map((player, index) => {
-                dataEl.innerHTML += `<p>${index}. ${JSON.stringify(player)}</p>`
-            })
-        })
-    </script>
 </html>
