finished defense; started node parsing

--- a/public/index.html
+++ b/public/index.html
@@ -3,10 +3,23 @@
 
     </head>
     <body>
-        <H1>DK_Picker</H1>
+        <H1>Fantasy Football Picker</H1>
         <div id="data" >
-            <div id="defenses"></div>
+            <di>
+                <h2>Defense</h2>
+                <div id="defenses"></div>
+            </di>
+            <div>
+                <h2>Quarterbacks</h2>
+                <div id="qbs"></div>
+            </div>
+            <div>
+                <h2>Wide Receivers</h2>
+                <div id="wrs"></div>
+            </div>
+            
         </div>
+        <h3>Data courtesy of <a href="https://www.pro-football-reference.com/years/2020/fantasy.htm">pro-football-reference.com</a></h3>
         <script src="../src/index.js"></script>
     </body>
 </html>
